feat(server): add the unretire command
